fix(ui): move Main gap to Header component

--- a/core/saika/css/main.css
+++ b/core/saika/css/main.css
@@ -21,8 +21,6 @@ a {
 }
 
 .Main {
-  padding-top: var(--header-height);
-
   & h1,
   & h2,
   & h3,
